# git-rtc

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: main.ts  message.ts  server.ts  signaling.ts  utils.ts
src/api/: Cargo.toml
src/cli/: Cargo.toml
src/fmt/: Cargo.toml
src/fmt/src/: flate.rs  git.rs  lib.rs  zlib.rs
src/lib/: Cargo.toml
src/lib/src/: def.rs  hash.rs  lib.rs  obj.rs  repo.rs
src/odb/: Cargo.toml
src/odb/src/: flate.rs  lib.rs  loose.rs
src/odb/src/flate/: block.rs  huffman.rs
src/rtc/: establish.ts  node-defaults.ts  node-server.ts  server.ts
src/syn/: Cargo.toml
src/syn/src/: lib.rs
src/vfs/: Cargo.toml
web/: next.config.mjs  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/utils/: hook.tsx
