[package]
name = "git-rtc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "1.0.0"
gix-hash = "0.14.1"
gix-object = "0.40.1"
gix-odb = "0.56.1"
gix-ref = "0.40.1"
hex = "0.4.3"
serde = { version = "1.0.195", features = ["derive"] }
sha1 = { version = "0.10.6", features = ["compress"] }
